# VES

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.unix  README.md  run.bat  run.sh  vcpkg.cmake  vcpkg.json  ves.yaml
VES/: main.cpp
res/map/: 0.yaml
res/script/: test.lua
src/: components.cpp  controller.cpp  graphics.cpp  main.cpp  pathfind.cpp  script.cpp  ves.cpp  world.cpp
src/include/: components.hpp  ves.hpp
